--- a/index.html
+++ b/index.html
@@ -12,17 +12,23 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Font Roboto -->
+    <!-- Font Press Start 2P -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
+    <!-- Font Pokemon -->
+    <link href="https://fonts.cdnfonts.com/css/pokemon-solid" rel="stylesheet">
 
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/modal.css">
+
 </head>
 
 <body>
+
     <section class="content">
         <h1>Pokedex</h1>
 
@@ -36,6 +42,8 @@
             </button>
         </div>
     </section>
+
+
 
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
