--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
     <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
-</head>
+    <link rel="stylesheet" href="C:\Users\caio_\OneDrive\Área de Trabalho\aula dio\js-developer-pokedex\assets/css/global.css">
+    <link rel="stylesheet" href="C:\Users\caio_\OneDrive\Área de Trabalho\aula dio\js-developer-pokedex\assets/css/pokedex.css">
+</head> 
 
 <body>
     <section class="content">
@@ -38,9 +38,9 @@
     </section>
 
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="C:\Users\caio_\OneDrive\Área de Trabalho\aula dio\js-developer-pokedex\assets/js/pokemon-model.js"></script>
+    <script src="C:\Users\caio_\OneDrive\Área de Trabalho\aula dio\js-developer-pokedex\assets/js/poke-api.js"></script>
+    <script src="C:\Users\caio_\OneDrive\Área de Trabalho\aula dio\js-developer-pokedex\assets/js/main.js"></script>
 </body>
 
 </html>
