--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
         <button id="loadMoreButton" type="button">Load Morer</button>
       </div>
     </section>
-    <div  id="modalInser" class="modalMain">
-      
-    </div>
+    <div  id="modalInser" class="modalMain"> </div>
     <!-- JS -->
     <script src="assets/js/pokemon-model.js"></script>
     <script src="assets/js/poke-api.js"></script>
