--- a/pages/card.html
+++ b/pages/card.html
@@ -24,6 +24,7 @@
 
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pokedex.css" />
     <link rel="stylesheet" href="../assets/css/pokecard.css" />
   </head>
   <body>
