--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/pokemon-modal.css">
 </head>
 
 <body>
@@ -37,10 +38,15 @@
         </div>
     </section>
 
+    <section class="disable" id="modal">
+        <h1>teste</h1>
+    </section>
+
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/pokemon-modal.js"></script>
 </body>
 
 </html>
