--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
+        <h1>Lista de Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
@@ -38,8 +38,8 @@
     </section>
 
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
+    <script src="/assets/js/pokeModel.js"></script>
+    <script src="/assets/js/pokeApi.js"></script>
     <script src="/assets/js/main.js"></script>
 </body>
 
