--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="pagination">
             <button id="loadMoreButton" type="button">
-                Load More
+                Next Load More
             </button>
         </div>
     </section>
