--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
     <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="src/style/global.css">
+    <link rel="stylesheet" href="src/style/pokeColors.css">
+    <link rel="stylesheet" href="src/style/pokedex.css">
 </head>
 
 <body>
@@ -38,9 +39,9 @@
     </section>
 
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="/src/scripts/pokemon-model.js"></script>
+    <script src="/src/scripts/poke-api.js"></script>
+    <script src="/src/scripts/main.js" defer></script>
 </body>
 
 </html>
