--- a/index.html
+++ b/index.html
@@ -26,8 +26,17 @@
     <section class="content">
         <h1>Pokedex</h1>
 
+        <button class="openDialog">Abrir Diálogo</button>
+
+        <dialog id="meuDialogo">
+            <!-- <p>Conteúdo do diálogo aqui.</p> -->
+            <!-- <button id="fechar-dialogo">Fechar Diálogo</button> -->
+        </dialog>
+           
+
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
+            
         </ol>
 
         <div class="pagination">
