--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <!-- Nosso JS -->
-    <script src="./assets/js/manipulaçãoModal.js"></script>
+    <script src="./assets/js/manipulacaoModal.js"></script>
     <script src="./assets/js/pokemon-model.js"></script>
     <script src="./assets/js/poke-api.js"></script>
     <script src="./assets/js/main.js"></script>
