--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
+    <script src= ""></script>
 </body>
 
 </html>
