--- a/index.html
+++ b/index.html
@@ -37,11 +37,17 @@
         </div>
     </section>
 
+    <div class="modal">
+        <div class="modal-content">
+
+        </div>
+    </div>
+
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
-    <script src= ""></script>
+    <script src="/assets/js/pokemon-detail.js"></script>
 </body>
 
 </html>
