--- a/pokemon.html
+++ b/pokemon.html
@@ -2,8 +2,10 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex</title>
+
     <!-- Normalize CSS -->
     <link
       rel="stylesheet"
@@ -12,29 +14,26 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- Global CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css" />
-    <link rel="stylesheet" href="/assets/css/pokedex.css" />
-    <!-- Google Fonts -->
+
+    <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap"
       rel="stylesheet"
     />
-  </head>
-  <body>
-    <section class="content">
-      <h1>Pokedex</h1>
-      <ol id="pokemonsList" class="pokemons"></ol>
-      <div class="pagination">
-        <button id="loadMore" type="button">Load More</button>
-      </div>
-    </section>
 
-    <!-- Scripts -->
+    <!-- Nosso CSS -->
+    <link rel="stylesheet" href="/assets/css/global.css" />
+    <link rel="stylesheet" href="/assets/css/pokedex.css" />
+    <link rel="stylesheet" href="/assets/css/pokemon.css" />
+  </head>
+
+  <body>
+    <section id="pokemon-details" class="content-detail"></section>
+
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/pokemon-details.js"></script>
   </body>
 </html>
