--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
     <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/DIO POKEDEX OFICIAL/js-developer-pokedex/assets/css/global.css">
+    <link rel="stylesheet" href="/DIO POKEDEX OFICIAL/js-developer-pokedex/assets/css/pokedex.css">
+
+    <!--Imagens-->
+    <link rel="icon" href="/DIO POKEDEX OFICIAL/js-developer-pokedex/assets/Imagens/pokebola.png">
+    
 </head>
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
+        <h1 class="Pokedex">Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
@@ -38,9 +42,9 @@
     </section>
 
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="/DIO POKEDEX OFICIAL/js-developer-pokedex/assets/js/pokemon-model.js"></script>
+    <script src="/DIO POKEDEX OFICIAL/js-developer-pokedex/assets/js/poke-api.js"></script>
+    <script src="/DIO POKEDEX OFICIAL/js-developer-pokedex/assets/js/main.js"></script>
 </body>
 
 </html>
