--- a/details-pokemon.html
+++ b/details-pokemon.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
       href="https://img.icons8.com/plasticine/100/pokeball.png"
       type="image/x-icon"
     />
-    <title>Pokedex</title>
+    <title>Pokedex | Details</title>
 
     <!-- Normalize CSS -->
     <link
@@ -30,25 +29,28 @@
 
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css" />
+    <link rel="stylesheet" href="/assets/css/pokemon-details.css" />
     <link rel="stylesheet" href="/assets/css/pokedex.css" />
   </head>
-
   <body>
-    <section class="content">
-      <h1>Pokedex</h1>
-
-      <ol id="pokemonList" class="pokemons">
-        <!-- ..... Pokemons here ..... -->
-      </ol>
-
-      <div class="pagination">
-        <button id="loadMoreButton" type="button">Load More</button>
+    <section class="poke-wrapper">
+      <div id="nav" class="navbar">
+        <div id="previous" class="button-nav">Voltar</div>
+        <div>
+          <a href="/"
+            ><img
+              width="50"
+              height="50"
+              src="https://img.icons8.com/material-rounded/24/2d2d2d/home.png"
+              alt="home"
+          /></a>
+        </div>
+        <div id="next" class="button-nav">Proximo</div>
       </div>
+      <div class="content-pokemon"></div>
     </section>
-
-    <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/pokemon-details.js"></script>
   </body>
 </html>
